# bluetooth-defender

./: .gitignore  CLAUDE.md  Makefile  README.md  devices.example.json  main.py  pyproject.toml  requirements.txt
defender/: __init__.py  cli.py  honeypot.py  scanner.py  streamer.py
defender/utils/: bt_helpers.py  logging.py
docs/brainstorming/: 2026-03-18-bluetooth-defender.md  2026-03-18-retaliation-modes.md
