[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bluetooth-defender"
version = "0.1.0"
description = "CLI toolkit for defending against unauthorized Bluetooth connections"
requires-python = ">=3.11"
dependencies = [
    "bumble>=0.0.197",
    "bleak>=0.22.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["defender*"]

[project.scripts]
bt-defender = "main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["defender"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
